<resources>

    <string name="app">PlantMate</string>
    <string name="login">WELCOME</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rePa">Re Enter Password</string>
    <string name="login_button">Log In</string>
    <string name="name">Name</string>
    <string name="noAccount">Dont have an account?</string>
    <string name="signup">SIGN UP</string>
    <string name="signupBtn">Sign Up</string>
    <string name="days">14 Days</string>
    <string name="reminderh">Check your Mint plants</string>
    <string name="reminder">Today you have to water, 2 days to harvest</string>
    <string name="maintain">Upcoming Maintenances</string>
    <string name="wrong">What’s Wrong With My Plant?</string>
    <string name="myplants">My Plants</string>
    <string name="profile">Profile</string>
    <string name="pname">Name</string>
    <string name="pemail">Email</string>
    <string name="addPlant">Add a plant +</string>
    <string name="mint">Mint(Mentha)</string>
    <string name="add">Added 3 days ago</string>
    <string name="onb1main">Grow Healthy Plants, Hassle-Free</string>
    <string name="onb1sub">Track care tasks, watering,fertilizing</string>
    <string name="onb2main">Identify Sickness</string>
    <string name="onb2sub">Upload a photo and get instant care about plant health</string>
    <string name="onb3main">Plant Care Reminder</string>
    <string name="onb3sub">Set watering, sunlight, and fertilizing reminders – we’ll notify you on time</string>
    <string name="next">Next</string>
    <string name="start">Start</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>